@@ -57,6 +57,12 @@ dpdk_vhost_iommu_enabled(void)
 }
 
 bool
+dpdk_vhost_postcopy_enabled(void)
+{
+    return false;
+}
+
+bool
 dpdk_per_port_memory(void)
 {
     return false;
